[gd_scene load_steps=5 format=1]

[ext_resource path="res://scenes/Coin.gd" type="Script" id=1]
[ext_resource path="res://dat/img/coins_pimp.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 31.4298

[sub_resource type="Animation" id=2]

resource/name = "Normal"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("ImgCoin:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2, 0.3, 0.5, 0.7, 0.8 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[node name="Coin" type="Node2D"]

script/script = ExtResource( 1 )

[node name="ImgCoin" type="Sprite" parent="."]

texture = ExtResource( 2 )
vframes = 2
hframes = 3
frame = 1

[node name="AreaCoin" type="Area2D" parent="ImgCoin" groups=[
"Coin",
]]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ImgCoin/AreaCoin"]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Normal = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "Normal"

[connection signal="body_enter" from="ImgCoin/AreaCoin" to="." method="_on_AreaCoin_body_enter"]


